<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-6dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3d3d4d"
        tools:context=".PlusAd">

        <ImageView
            android:id="@+id/select_home_image"
            android:layout_width="0dp"
            android:layout_height="204dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/input_design"
            android:backgroundTint="#373745"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_image"
            tools:ignore="ContentDescription,ImageContrastCheck" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="384dp"
            app:helperText="required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:hint="Цена(RUB)"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_below="@+id/select_home_image"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="104dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_design"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/rub"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A6A6A6"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_home_image" />

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_below="@+id/cost"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_design"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A6A6A6"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cost"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cost"
            app:layout_constraintTop_toBottomOf="@+id/cost" />

        <EditText
            android:id="@+id/square"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_below="@+id/location"
            android:layout_marginTop="4dp"
            android:background="@drawable/input_design"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textColorHint="#A6A6A6"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/squareValue"
            app:layout_constraintStart_toStartOf="@+id/squareValue"
            app:layout_constraintTop_toBottomOf="@+id/squareValue"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/room"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_below="@+id/location"
            android:layout_marginTop="4dp"
            android:background="@drawable/input_design"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textColorHint="#A6A6A6"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/roomsvalue"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="@+id/roomsvalue"
            app:layout_constraintTop_toBottomOf="@+id/roomsvalue" />

        <EditText
            android:id="@+id/info_house"
            android:layout_width="0dp"
            android:layout_height="163dp"
            android:layout_below="@+id/location"
            android:layout_marginTop="116dp"
            android:background="@drawable/input_design"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/info"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#A6A6A6"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/location"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_below="@+id/info_house"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button"
            android:fontFamily="@font/comfortaa"
            android:text="@string/Create"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cost"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cost"
            app:layout_constraintTop_toBottomOf="@+id/info_house"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner

            android:id="@+id/spinner"
            android:layout_width="211dp"
            android:layout_height="55dp"
            android:background="@drawable/input_design"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cost"
            app:layout_constraintEnd_toEndOf="@+id/cost"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cost"
            app:layout_constraintTop_toBottomOf="@+id/select_home_image"
            app:layout_constraintVertical_bias="0.775" />

        <TextView
            android:id="@+id/squareValue"
            android:layout_width="169dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/square"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/roomsvalue"
            android:layout_width="169dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/roomsvalue"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/typeHome"
            android:layout_width="169dp"
            android:layout_height="24dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/comfortaa"
            android:text="Тип недвижимости"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:background="@drawable/rectangle_rounded_some"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/exitBuy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/button"
                android:backgroundTint="#6C63FF"
                android:fontFamily="@font/comfortaa"
                android:textColor="#ffffff"
                android:textSize="12sp"

                android:textStyle="bold"
                app:backgroundTint="@null"
                app:icon="@drawable/close"
                app:iconGravity="top"
                app:iconSize="20dp"
                app:iconTint="#ffffff"
                app:iconTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.36" />

            <TextView
                android:id="@+id/infoBuy"
                android:layout_width="260dp"
                android:layout_height="34dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/add"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>



